# temporal-workflow-versioning

./: README.md  mise.toml
docs/presentations/: presentation.html  presentation.md
python/: pyproject.toml  run_demo.sh  worker.py
python/activities/: card.py  transaction_auth.py  transaction_dispute.py
python/tests/: conftest.py  test_replay_card.py  test_replay_transaction_auth.py  test_replay_transaction_dispute.py
python/tests/histories/: card-workflow-before-can.json  card-workflow-can.json  transaction-auth.json  transaction-dispute-customer-no-dispute.json  transaction-dispute-merchant-no-response.json  transaction-dispute-unauthorized.json
python/workflows/: card.py  simulation.py  transaction_auth.py  transaction_dispute.py
