[project]
name = "temporal-worker-versioning-demo"
version = "0.1.0"
description = "Temporal Worker Versioning demo — credit card account lifecycle"
requires-python = ">=3.14.4"
dependencies = [
    "temporalio==1.27.0",
]

[dependency-groups]
dev = [
    "pytest==9.0.3",
    "pytest-asyncio==1.3.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
